tests/typing/errors/mismatch_record_type/error2.expected
File "tests/typing/errors/mismatch_record_type/error2.ae", line 6, character 19-49:
6 |   forall x:t . x = { foobar = false; foo = true }
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error The field foo does not belong to record type tt
